--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     // https://github.com/Karumi/Dexter
     implementation 'com.karumi:dexter:6.0.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
+
 }
