--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,6 @@ dependencies {
     implementation 'com.karumi:dexter:6.0.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
+    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
 }
